--- a/FINAL PROJECT 1/home.html
+++ b/FINAL PROJECT 1/home.html
@@ -6,7 +6,7 @@
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"> -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap">
-    <title>Document</title>
+    <title>Home Page</title>
     <style>
         :root {
             --warna-1: #fe5b3d;
@@ -87,7 +87,7 @@
         }
 
         /* banner */
-        .home {
+        .banner {
             width: 100%;
             min-height: 100vh;
             position: relative;
@@ -98,26 +98,26 @@
             display: grid;
             align-items: center;
         }
-        .text {
+        .content {
             margin-left: 100px;
         }
-        .text h1 {
+        .content h1 {
             font-size:3.5rem;
             letter-spacing:2px;
         }
-        .text span {
+        .content span {
             color:var(--warna-1);
         }
-        .text p {
+        /* .content p {
             margin:0.5rem 0 1rem;
-        }
-        .text .btn {
+        } */
+        .content .btn {
             padding: 10px 20px;
             background: #474fa0;
             color: #fff;
             border-radius: 0.8rem;
         }
-        .text .btn:hover {
+        .content .btn:hover {
             background: var(--warna-1);
         }
         .logo2 {
@@ -127,7 +127,6 @@
             margin-bottom: 20px;
             width:100px;
             margin-right:1rem;
-            cursor:pointer;
         }
 
         /* footer */
@@ -175,7 +174,7 @@
             <li><a href="home.html">Home</a></li>
             <li><a href="#">Blogs</a></li>
             <li><a href="#">About</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="contact.html">Contact</a></li>
             <li><a href="#">Todos</a></li>
         </ul>
         <div class="nav-btn">
@@ -184,8 +183,8 @@
         </div>
     </header>
 
-    <section class="home">
-        <div class="text">
+    <section class="banner">
+        <div class="content">
             <h1><span>CARI</span> RENTAL <br>MOBIL?</h1>
             <div class="logo2">
                 <img src="https://www.zarla.com/images/zarla-rentalyuk-1x1-2400x2400-20220805-9xybqtfc48p7frd6mhmw.png?crop=1:1,smart&width=250&dpr=2">
