--- a/FINAL PROJECT 1/home.html
+++ b/FINAL PROJECT 1/home.html
@@ -173,7 +173,7 @@
         <ul class="nav">
             <li><a href="home.html">Home</a></li>
             <li><a href="#">Blogs</a></li>
-            <li><a href="#">About</a></li>
+            <li><a href="about.html">About</a></li>
             <li><a href="contact.html">Contact</a></li>
             <li><a href="#">Todos</a></li>
         </ul>
